feat: spring ai를 통한 api 요청 구현 성공 !