@@ -2,8 +2,14 @@ package com.codeit.weatherfit.domain.recommendation.ai;
 
 import com.codeit.weatherfit.domain.clothes.entity.Clothes;
 import com.codeit.weatherfit.domain.profile.entity.Profile;
+import com.codeit.weatherfit.domain.weather.entity.PrecipitationType;
+import com.codeit.weatherfit.domain.weather.entity.SkyStatus;
 import com.codeit.weatherfit.domain.weather.entity.Weather;
 import org.springframework.ai.chat.client.ChatClient;
+import org.springframework.ai.chat.messages.SystemMessage;
+import org.springframework.ai.chat.messages.UserMessage;
+import org.springframework.ai.chat.model.ChatResponse;
+import org.springframework.ai.chat.prompt.Prompt;
 import org.springframework.ai.converter.BeanOutputConverter;
 import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.stereotype.Component;
@@ -27,12 +33,13 @@ public class AiClothesRecommender implements ClothesRecommender {
         List<PromptClothesInfo> list = clothesList.stream()
                 .map(PromptClothesInfo::from)
                 .toList();
-        WeatherInfo weatherInfo = WeatherInfo.from(weather);
+//        WeatherInfo weatherInfo = WeatherInfo.from(weather); // todo: 우선은 고정된 날씨 정보 전달
+        WeatherInfo weatherInfo = new WeatherInfo(12, 13, 10, SkyStatus.CLEAR.name(), PrecipitationType.NONE.name(), 3.3, 10, "서울");
         UserInfo userInfo = UserInfo.from(profile);
 
         var outputConverter = new BeanOutputConverter<>(new ParameterizedTypeReference<List<ClothesSetResponse>>() {});
 
-        String systemMessage = ClothesRecommendationPrompt.systemPrompt() + "\n" + outputConverter.getFormat();
+        String systemMessage = ClothesRecommendationPrompt.systemPrompt();
         String userMessage = ClothesRecommendationPrompt.userPrompt(list, weatherInfo, userInfo);
 
         List<ClothesSetResponse> entity = chatClient.prompt()
@@ -40,8 +47,7 @@ public class AiClothesRecommender implements ClothesRecommender {
                 .user(userMessage)
                 .call()
                 .entity(outputConverter);
-
-
-        return entity.get(0).items();
+        assert entity != null;
+        return entity.getFirst().items();
     }
 }
